Bug 1578851 - Using VRManagerChild to check isPresenting to skip painting in nsRefreshDriver.

Tags: #secure-revision

Bug #: 1578851

Differential Revision: https://phabricator.services.mozilla.com/D48119